--- a/views/pirates/new.erb
+++ b/views/pirates/new.erb
@@ -1,1 +1,13 @@
 <h1>Make your form here</h1>
+<form action="/pirates" method="post">
+  <p>Pirate name: <input type="text" name="pirate[name]"</p>
+  <p>Pirate weight: <input type="text" name="pirate[weight]"</p>
+  <p>Pirate height: <input type="text" name="pirate[height]"</p>
+  <p>Ship name: <input type="text" name="pirate[ships][][name]"</p>
+  <p>Ship type: <input type="text" name="pirate[ships][][type]"</p>
+  <p>Ship booty: <input type="text" name="pirate[ships][][booty]"</p>
+  <p>Ship name: <input type="text" name="pirate[ships][][name]"</p>
+  <p>Ship type: <input type="text" name="pirate[ships][][type]"</p>
+  <p>Ship booty: <input type="text" name="pirate[ships][][booty]"</p>
+  <input type="submit">
+</form>
