--- a/views/pirates/show.erb
+++ b/views/pirates/show.erb
@@ -1,7 +1,18 @@
 <h1>Display your Pirate here</h1>
+  <h3>Name: <%= @pirate.name %></h3><br>
+  <h4>Weight: <%= @pirate.weight %></h4>
+  <h4>Height: <%= @pirate.height %></h4>
+<br>
+
+9.	<% @courses.each do |course| %>
+10.	  <div class="course">
+11.	    <p>Name: <%= course.name %></p><br>
+12.	    <p>Topic: <%= course.topic %></p><br>
+13.	  </div><br>
+14.	<% end %>
 
 
 <h2>Display your first ship here</h2>
-
+  <h3>Name: <%= @ships.
 
 <h2>Display your second ship here</h2>
